# themis

./: README.md  pyproject.toml
themis/: constants.py  pdf_extractor.py  pdf_scraping.py
themis/data/: convert_oab.py  convert_vade_mecum.py  oab_database.py  vade_mecum_database.py
themis/pdf/: pdf_extractor.py  pdf_layout.py  pdf_scraping.py  utils.py
themis/prompts/: generate_instructions.py  generate_multi_choice_questions.py  generate_questions.py  load_multi_choice.py  load_single_choice.py
themis/scripts/: oab_provas.py
