[tool.poetry]
name = "themis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pdfminer-six = "^20221105"
tqdm = "^4.66.1"
freegpt = "^1.3.4"
selenium = "^4.16.0"
beautifulsoup4 = "^4.12.2"
pandas = "^2.1.4"
g4f = "^0.1.9.3"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
